18622 FIX Chrome: page shifts to the top
SUP-25600

--- a/packages/cmk-frontend/src/themes/facelift/scss/_sidebar.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_sidebar.scss
@@ -15,6 +15,7 @@
 '-------------------------------------------------------------------------*/
 
 body.side {
+  position: fixed;
   width: 100vw;
   height: 100vh;
   padding: 0;
